<resources>
    <string name="app_name">Hey!</string>
    <string name="icon_description">People Icon</string>

    <string name="loading_description">We are getting your friend list, make sure you have a stable
        internet connection.</string>
    <string name="loading_description_error">Something went wrong, make sure you have a stable internet
        connection and try again</string>
    <string name="loading_try_again">Try Again</string>

    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>

    <string name="search">Search…</string>
    <string name="favorites">Favorites</string>

    <string name="sample_friend_name">Angela Smith</string>
    <string name="sample_friend_birthday">28/08/81</string>
    <string name="sample_friend_call_datetime">28/07/81 18:52</string>
    <string name="sample_friend_state">Michigan</string>
    <string name="sample_friend_number">(489)-330–2385</string>
    <string name="sample_friend_bd_description">in 30 days</string>
    <string name="item_friend_bd_description">in %1$d day(s)</string>
    <string name="item_friend_bd_description_today">Today</string>

    <string name="card_bd_birthday">Birthday</string>

    <string name="home_title_birthdays">Coming birthdays</string>
    <string name="home_title_recent">Recent calls</string>

    <string name="settings_reset">Reset app data</string>
    <string name="settings_mail">Contact the developer</string>


    <string name="modal_title">Are you sure?</string>
    <string name="modal_description">All the app data will be deleted from your phone</string>
    <string name="modal_confirm">Reset</string>
    <string name="modal_cancel">Cancel</string>


</resources>