<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.homenav.settings.SettingsView"
    >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/home_title"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        />

    <Button
        android:id="@+id/settings_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/option_height"
        android:text="@string/settings_reset"
        app:icon="@drawable/ic_delete"
        android:textStyle="bold"
        android:textSize="@dimen/item_under_title"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        />

    <Button
        android:id="@+id/settings_mail_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/option_height"
        android:text="@string/settings_mail"
        android:textStyle="bold"
        android:textSize="@dimen/item_under_title"

        app:icon="@drawable/ic_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_reset_btn"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>