<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.loading.LoadingView"
    >

    <ImageView
        android:id="@+id/loading_app_icon"
        android:layout_width="@dimen/title_icon"
        android:layout_height="@dimen/title_icon"
        android:src="@drawable/circle_icon"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loading_app_title"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginEnd="@dimen/margin"
        android:contentDescription="@string/icon_description" />

    <TextView
        android:id="@+id/loading_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="72sp"
        android:textColor="?colorPrimary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/loading_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="@dimen/loading_image"
        android:layout_height="@dimen/loading_image"
        app:lottie_fileName="lf_loading3.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_app_title"
        app:layout_constraintBottom_toTopOf="@id/loading_description"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/loading_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_description"
        android:textAlignment="center"
        android:textSize="@dimen/description_ts"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_animation"
        android:layout_marginHorizontal="@dimen/double_margin"
        />

    <Button
        android:id="@+id/loading_bt_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_try_again"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/double_margin"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>