<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/half_margin"
    android:clickable="true"
    android:focusable="true"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_friend_image"
        android:layout_width="@dimen/friend_item_image_size"
        android:layout_height="@dimen/friend_item_image_size"
        android:src="@drawable/sample_girl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleShape"
        />

    <TextView
        android:id="@+id/item_friend_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_friend_name"
        android:textStyle="bold"
        android:textSize="@dimen/friends_list_item_title"

        app:layout_constraintStart_toEndOf="@id/item_friend_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin"
        />


    <TextView
        android:id="@+id/item_friend_text_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_friend_state"
        android:textStyle="normal"
        android:textSize="@dimen/friends_list_under_title"

        app:layout_constraintStart_toEndOf="@id/item_friend_image"
        app:layout_constraintTop_toBottomOf="@id/item_friend_text_name"
        android:layout_marginStart="@dimen/margin"
        />

    <TextView
        android:id="@+id/item_friend_text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_friend_number"
        android:textStyle="normal"
        android:textSize="@dimen/item_description"

        app:layout_constraintTop_toBottomOf="@id/item_friend_text_state"
        app:layout_constraintStart_toEndOf="@id/item_friend_image"

        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>