<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginEnd="@dimen/half_margin"
    android:layout_marginBottom="@dimen/half_margin"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_bd_friend_image"
            android:layout_width="@dimen/friend_bd_item_image_size"
            android:layout_height="@dimen/friend_bd_item_image_size"
            android:src="@drawable/sample_girl"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleShape"
            />

        <TextView
            android:id="@+id/item_bd_friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_friend_name"
            android:textStyle="bold"
            android:textSize="@dimen/item_title"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/item_bd_friend_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin"
            />

        <TextView
            android:id="@+id/item_bd_friend_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_friend_birthday"
            android:textStyle="normal"
            android:textSize="@dimen/item_under_title"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/item_bd_friend_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/item_bd_friend_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_bd_birthday"
            android:textStyle="normal"
            android:textSize="@dimen/item_bd_description"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/item_bd_friend_birthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin"
            />
        <TextView
            android:id="@+id/item_bd_friend_description_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_friend_bd_description"
            android:textStyle="normal"
            android:textSize="@dimen/item_bd_description"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/item_bd_friend_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>