<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.homenav.home.HomeView"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/home_app_icon"
            android:layout_width="@dimen/title_icon"
            android:layout_height="@dimen/title_icon"
            android:src="@drawable/circle_icon"

            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/home_app_title"
            android:layout_marginTop="@dimen/double_margin"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/icon_description" />

        <TextView
            android:id="@+id/home_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="72sp"
            android:textColor="?colorPrimary"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/home_recent_calls_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_recent"
            android:textSize="@dimen/home_title"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_app_title"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_friends_rv_recent_calls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_recent_calls_title"
            android:layout_marginTop="@dimen/margin"
            tools:itemCount="3"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/friend_call_item" />

        <TextView
            android:id="@+id/home_birthdays_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_birthdays"
            android:textSize="@dimen/home_title"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_friends_rv_recent_calls"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_friends_rv_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/half_margin"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_birthdays_title"
            android:layout_marginTop="@dimen/margin"
            tools:itemCount="4"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/friend_bd_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>